--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@ethersproject/bignumber": "^5.4.4",
     "@ethersproject/providers": "^5.4.4",
     "@ethersproject/units": "^5.4.4",
+    "@magic-ext/oauth": "^2.0.1",
+    "@magiclabs/ui": "^0.24.0",
     "@react-tiny-grid/core": "^0.1.7",
     "@safient/core": "^0.1.10-alpha",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,9 +15,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
     "classnames": "^2.3.1",
+    "ethers": "^5.5.4",
     "i18n-js": "^3.8.0",
     "init": "^0.1.2",
     "lodash": "^4.17.21",
+    "magic-sdk": "^4.0.2",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "polished": "^4.1.1",
