--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "polished": "^4.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-grid-system": "^7.2.0",
     "react-router-dom": "^5.3.0",
@@ -61,6 +62,7 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.28",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.1",
