--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@magic-ext/oauth": "^2.0.1",
     "@magiclabs/ui": "^0.24.0",
     "@react-tiny-grid/core": "^0.1.7",
-    "@safient/core": "file:../core-js/safient-core-js",
+    "@safient/core": "^0.1.15-alpha",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -26,10 +26,12 @@
     "mobx-react-lite": "^3.2.1",
     "polished": "^4.1.1",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^2.0.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-grid-system": "^7.2.0",
+    "react-qr-code": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
