--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "polished": "^4.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-canvas-confetti": "^1.3.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-grid-system": "^7.2.0",
