--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-canvas-confetti": "^1.3.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.11",
     "react-grid-system": "^7.2.0",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^5.3.0",
@@ -71,6 +72,7 @@
     "@types/react": "^17.0.28",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.9",
+    "@types/react-flatpickr": "^3.8.6",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.13",
