--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
     "react-svg": "^14.0.4",
+    "react-toggle": "^4.1.2",
     "react-tooltip": "^4.2.21",
     "sb": "^6.1.20",
     "styled-components": "^5.2.1",
@@ -76,6 +77,7 @@
     "@types/react-flatpickr": "^3.8.6",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-toggle": "^4.0.3",
     "@types/styled-components": "^5.1.13",
     "@types/styled-jsx": "^2.2.9",
     "@types/styled-react-modal": "^1.2.1",
