#64 - DDay based Claim integration (#75)
* integrates Dday based claim

* adds timestamp calculation for DDaybaed claim using date picker

* resloves conflicts

* adds claim type selection for wallet creation

* adds alert for default claim on wallet creation

Co-authored-by: Koshik Raj <koshik.raj@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@magic-ext/oauth": "^2.0.1",
     "@magiclabs/ui": "^0.24.0",
     "@react-tiny-grid/core": "^0.1.7",
-    "@safient/core": "^0.1.15-alpha",
+    "@safient/core": "^0.1.17-alpha",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.1",
     "ethereumjs-wallet": "^1.0.2",
     "ethers": "^5.5.4",
     "framer-motion": "^4.1.17",
